사용자 정보 조회, 토큰 폐기 API 추가
