# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\LoginController;
+use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -15,7 +16,17 @@ use Illuminate\Support\Facades\Route;
 */
 
 // 회원 가입
-Route::post('register', [LoginController::class, "register"]);
+Route::post('register', [LoginController::class, "register"])->name("user.register");
 
-// 토큰 발급
-Route::post("token", [LoginController::class, "token"]);
+// 토큰 발급 (login)
+Route::post("token", [LoginController::class, "issueToken"])->name("user.token.issue");
+
+
+Route::group(["middleware" => ["auth:sanctum"]], function () {
+
+    // 토큰 폐기 (logout)
+    Route::get("token/dispose", [LoginController::class, "disposeToken"])->name("user.token.dispose");
+
+    // 사용자 정보
+    Route::get("me", [UserController::class, "me"]);
+});
